[Feat] ITX-청춘 pilot 정차역 14곳을 station master에 추가 (Refs #2095, #2098, #1414)
오너 결정(옵션 A): capacity evidence의 프로브 범위를 Route V2 pilot 범위
(ITX-청춘)로 고정한다. 역 데이터 완성(real data-pack adapter, 전체 역)은
#2098/#1414 소유의 별도 트랙이고, capacity의 목적은 scope·rate-limit·
session·ephemeral 제어 검증이다.

## 매핑 실측

production runner(oci-a1-staging)의 격리 클론(운영 dump를 pg_dump로 읽어
--internal 격리망에 pg_restore, 운영 컨테이너/DB는 무변경)에서
transit_stop_times/transit_trips(service_class='ITX_CHEONGCHUN')의
station_id를 실제 stop_sequence 순서로 추출해 확인했다. 14개 해시
station_id가 나왔고, 대표 트립 하나(춘천→용산 방향)의 정차 순서:

  춘천 → 남춘천 → 가평 → 마석 → 평내호평 → 사릉 → 퇴계원 → 상봉 →
  청량리 → 왕십리 → 용산

는 오너가 제공한 순서(용산 → 옥수 → 왕십리 → 청량리 → 상봉 → 퇴계원 →
사릉 → 평내호평 → 마석 → 청평 → 가평 → 강촌 → 남춘천 → 춘천)의 정확한
역방향과 일치한다(경춘선은 양방향 운행). 해시 id ↔ 실제 역 이름은
tools/datapack/sources/itx-cheongchun-source-timetable-20260715152903681.json
의 stationRosters(providerStationId·providerStationName·canonicalStationId·
corridorSequence, KRIC 공공데이터포털 API 출처)에서 가져와 대조했고,
corridorSequence(1,2,3,4,7,12,13,15,17,19,21,24,26,27)가 오너 순서와
정확히 일치했다(경춘선 완행 전용 정차역 4곳 — 광운대·대성리·백양리·
김유정 — 은 ITX-청춘이 서지 않아 제외).

| corridorSequence | canonicalStationId | 이름 |
|---|---|---|
| 1 | station-8aa315864466 | 용산 |
| 2 | station-c0679b9a6cf8 | 옥수 |
| 3 | station-e5cf592cf355 | 왕십리 |
| 4 | station-b819702fa7d9 | 청량리 |
| 7 | station-83bcb1eae340 | 상봉 |
| 12 | station-b52ac4dfe64e | 퇴계원 |
| 13 | station-2ccf5647f7f7 | 사릉 |
| 15 | station-f3d9c93ba7d6 | 평내호평 |
| 17 | station-661ff65ea040 | 마석 |
| 19 | station-6c1f50a5aa3b | 청평 |
| 21 | station-4f6045ff9103 | 가평 |
| 24 | station-30ba86472e55 | 강촌 |
| 26 | station-d5e344125b52 | 남춘천 |
| 27 | station-dd14cfb89cbc | 춘천 |

## 아키텍처 선택

`InMemoryTransitMasterRepository`(prod에서 `JdbcTransitMasterOverrideRepository
extends UnavailableTransitMasterRepository`가 loadStations()를 오버라이드
하지 않고 그대로 상속하는 stub)의 STATIONS 목록에 14개를 하드코딩
추가했다(옵션 a). 근거:

- RouteV2Planner(#2098이 다루는 실제 ITX-청춘 경로 탐색기)는
  LoadTransitMasterPort/Station을 전혀 참조하지 않는다(grep 확인). 이
  station master가 실제로 관여하는 지점은 Route